--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <link rel="modulepreload" href="./_import/components/sorterTableClass.e30ae16e.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/timeGlyph.a1969fec.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js">
-<link rel="modulepreload" href="./_import/components/glyph-designs/radialglyph.111d8941.js">
+<link rel="modulepreload" href="./_import/components/glyph-designs/radialglyph.cbd7ddeb.js">
+<link rel="modulepreload" href="./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js">
 <link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.f034b425.js">
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/decarb-model/budget-allocator.5c9a0a07.js">
@@ -220,14 +221,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737377923509});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737377923519});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737377923519});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737377923520});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737445116108});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737445116118});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737445116118});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737445116118});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
-define({id: "f07cf3e1", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","createTable","SummarizeColumn","createTableFormat","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
-const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {createTable}, {SummarizeColumn, createTableFormat}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.e30ae16e.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.111d8941.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/input-table/input-table.247272e6.js"), import("./_import/components/helpers.c82b92f4.js")]);
+define({id: "877f8b65", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","RadialGlyphOverall","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","createTable","SummarizeColumn","createTableFormat","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
+const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {RadialGlyphOverall}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {createTable}, {SummarizeColumn, createTableFormat}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.e30ae16e.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/input-table/input-table.247272e6.js"), import("./_import/components/helpers.c82b92f4.js")]);
 console.log(">> Importing libraries...");
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -235,7 +236,7 @@ const flubber = require("flubber@0.4");
 
 
 
-return {d3,flubber,require,Mutable,turf,bulmaToast,bulmaQuickview,sorterTable,TimeGlyph,GlyphCollection,StreamGraphGlyph,RadialGlyph,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,BudgetAllocator,InterventionManager,MiniDecarbModel,createTimelineInterface,LeafletMap,createTable,SummarizeColumn,createTableFormat,inferTypes,enrichGeoData,normaliseData,insideCell,debounceInput,saveToSession,getFromSession,transformCoordinates,transformGeometry,normalisebyGroup,aggregateValues};
+return {d3,flubber,require,Mutable,turf,bulmaToast,bulmaQuickview,sorterTable,TimeGlyph,GlyphCollection,StreamGraphGlyph,RadialGlyph,RadialGlyphOverall,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,BudgetAllocator,InterventionManager,MiniDecarbModel,createTimelineInterface,LeafletMap,createTable,SummarizeColumn,createTableFormat,inferTypes,enrichGeoData,normaliseData,insideCell,debounceInput,saveToSession,getFromSession,transformCoordinates,transformGeometry,normalisebyGroup,aggregateValues};
 }});
 
 define({id: "5dd85f8f", inputs: ["OSGB"], outputs: ["proj"], body: (OSGB) => {
@@ -1271,11 +1272,12 @@ const data =
 return {selectedIntervenedBuildings,flatData,data};
 }});
 
-define({id: "504e390e", inputs: ["timeline_switch"], body: (timeline_switch) => {
+define({id: "8043f7ad", inputs: ["timeline_switch","aggregateValues","data","glyphVariables"], outputs: ["glyphdata"], body: (timeline_switch,aggregateValues,data,glyphVariables) => {
 timeline_switch;
-// const glyphdata = aggregateValues(data, glyphVariables, "sum", true);
+const glyphdata = aggregateValues(data, glyphVariables, "sum", true);
 // console.log(">> Glyph data", glyphdata);
 // console.log(normaliseData([{ a: 100, b: 200, c: 300 }], ["a", "b", "c"]));
+return {glyphdata};
 }});
 
 define({id: "1e1aab46", inputs: ["data"], outputs: ["excludedColumns","customOrder","tableColumns"], body: (data) => {
@@ -2170,43 +2172,59 @@ let keysToNormalise = [
 return {yearlySummaryArray,keysToNormalise};
 }});
 
-define({id: "8841c779", inputs: ["aggregateValues","glyphVariables","RadialGlyph","glyphColours"], outputs: ["createOverallPotential"], body: (aggregateValues,glyphVariables,RadialGlyph,glyphColours) => {
+define({id: "2531d4da", inputs: ["glyphVariables","RadialGlyphOverall","glyphdata","glyphColours"], outputs: ["createOverallPotential","cleanupTooltips"], body: (glyphVariables,RadialGlyphOverall,glyphdata,glyphColours) => {
 function createOverallPotential(data, width = 1100, height = 800) {
-  const margin = { top: 30, right: 150, bottom: 120, left: 80 };
-  const innerWidth = width - margin.left - margin.right;
-  const innerHeight = height - margin.top - margin.bottom;
+  const margin = { top: 80, right: 200, bottom: 200, left: 80 };
 
-  // Create canvas for drawing
-  const canvas = document.createElement("canvas");
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
+  const rgOptions = {
+    showTooltips: true,
+    showLegend: true,
+    title: "Overall Decarbonisation Potentials",
+    subtitle: "Aggregated building stock data",
+    labels: glyphVariables,
+    tooltipFormatter: (value) => `${(value * 100).toFixed(1)}%`,
+    width: width,
+    height: height,
+    backgroundColor: "#fafafa",
+    titleColor: "#2c3e50",
+    subtitleColor: "#7f8c8d",
+    glyphOpacity: 0.85,
+    glyphStrokeColor: "#ffffff",
+    glyphStrokeWidth: 1.5,
+    margin: margin,
+    legendPosition: "right",
+    titleAlignment: "middle",
 
-  const ctx = canvas.getContext("2d");
+    // Enhanced styling
+    titleFont: "system-ui, sans-serif",
+    subtitleFont: "system-ui, sans-serif",
+    legendFont: "system-ui, sans-serif",
+    titleFontSize: "24px",
+    subtitleFontSize: "16px",
+    legendFontSize: "14px",
+    legendSpacing: 30,
+    legendWidth: 180,
+  };
 
-  // Set cellSize dynamically
-  const cellSize = Math.min(innerWidth, innerHeight) / 2;
-
-  // Define x, y as the center of the canvas
-  const x = innerWidth / 2;
-  const y = innerHeight / 2;
-
-  let glyphdata = aggregateValues(data, glyphVariables, "sum", true);
-
-  console.log(
-    ">> Check radial glyph data",
-    glyphVariables.map((key) => glyphdata[key])
-  );
-
-  // Create and draw Radial Glyph
-  let rg = new RadialGlyph(
+  // Create Radial Glyph
+  const rg = new RadialGlyphOverall(
     glyphVariables.map((key) => glyphdata[key]),
-    glyphColours
+    glyphColours,
+    rgOptions
   );
-  rg.draw(ctx, x, y, cellSize / 2);
 
-  return canvas;
+  // Get the SVG element
+  return rg.createSVG();
 }
-return {createOverallPotential};
+
+// Helper function to clean up tooltips when needed
+function cleanupTooltips() {
+  const tooltip = document.querySelector(".radial-glyph-tooltip");
+  if (tooltip) {
+    tooltip.remove();
+  }
+}
+return {createOverallPotential,cleanupTooltips};
 }});
 
 define({id: "2b1041ed", inputs: ["d3"], outputs: ["createOverallPlot"], body: (d3) => {
@@ -2673,7 +2691,7 @@ return {createOverallPlot};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------ Imports ------------ -->
-<div class="observablehq observablehq--block"><!--:f07cf3e1:--></div>
+<div class="observablehq observablehq--block"><!--:877f8b65:--></div>
 <div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ---------------- Loading Raw Data ---------------- -->
 <div class="observablehq observablehq--block"><!--:fff1c897:--></div>
@@ -2876,7 +2894,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:8d85d522:--></div>
 <!-- ----------------  D A T A  ---------------- -->
 <div class="observablehq observablehq--block"><!--:376d8384:--></div>
-<div class="observablehq observablehq--block"><!--:504e390e:--></div>
+<div class="observablehq observablehq--block"><!--:8043f7ad:--></div>
 <div class="observablehq observablehq--block"><!--:1e1aab46:--></div>
 <div class="observablehq observablehq--block"><!--:e81778ff:--></div>
 <div class="observablehq observablehq--block"><!--:0ac7290d:--></div>
@@ -2910,7 +2928,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:9eb91f18:--></div>
 <!-- ----------------  Main Plot  ---------------- -->
 <div class="observablehq observablehq--block"><!--:8866168d:--></div>
-<div class="observablehq observablehq--block"><!--:8841c779:--></div>
+<div class="observablehq observablehq--block"><!--:2531d4da:--></div>
 <div class="observablehq observablehq--block"><!--:2b1041ed:--></div>
 </main>
 </div>
